# vulkan-guide

./: .atom-build.yml  .gitignore  CMakeLists.txt
Asset-Baker/: Asset-Baker.cpp  CMakeLists.txt
Asset-Lib/: CMakeLists.txt  asset_loader.cpp  asset_loader.h  mesh_asset.cpp  mesh_asset.h  texture_asset.cpp  texture_asset.h
assets/: Duck.glb
shaders/: coloredtriangle.frag  coloredtriangle.vert  default_lit.frag  redtriangle.frag  textured_lit.frag  tri_mesh.vert  triangle.frag  triangle.vert
src/: CMakeLists.txt  camera.cpp  camera.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_shader.cpp  vk_shader.h  vk_textures.cpp  vk_textures.h  vk_types.h  vk_vma.h
